@@ -9,18 +9,18 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class OrderLineService {
 
-  private final OrderLineRepository repository;
-  private final OrderLineMapper mapper;
+    private final OrderLineRepository repository;
+    private final OrderLineMapper mapper;
 
-  public Integer saveOrderLine(OrderLineRequest request) {
-    OrderLine order = mapper.toOrderLine(request);
-    return repository.save(order).getId();
-  }
+    public Integer saveOrderLine(OrderLineRequest request) {
+        OrderLine order = mapper.toOrderLine(request);
+        return repository.save(order).getId();
+    }
 
-  public List<OrderLineResponse> findAllByOrderId(Integer orderId) {
-    return repository.findAllByOrderId(orderId)
+    public List<OrderLineResponse> findAllByOrderId(Integer orderId) {
+        return repository.findAllByOrderId(orderId)
             .stream()
             .map(mapper::toOrderLineResponse)
-            .collect(Collectors.toList());
-  }
+            .toList();
+    }
 }
