@@ -18,120 +18,120 @@ import se.magnus.api.exception.NotFoundException;
 @RestController
 public class ProductCompositeServiceImpl implements ProductCompositeService {
 
-  private static final Logger LOG = LoggerFactory.getLogger(ProductCompositeServiceImpl.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ProductCompositeServiceImpl.class);
 
-  private ProductCompositeIntegration integration;
+    private ProductCompositeIntegration integration;
 
-  @Autowired
-  public ProductCompositeServiceImpl(
-          ProductCompositeIntegration integration) {
+    @Autowired
+    public ProductCompositeServiceImpl(
+        ProductCompositeIntegration integration) {
 
-    this.integration = integration;
-  }
-
-  /**
-   * Create Product
-   *
-   * @param body A JSON representation of the new composite product
-   */
-  @Override
-  public void createProduct(ProductAggregate body) {
-
-    try {
-
-      LOG.info("createCompositeProduct: creates a new composite entity for productId: {}", body.getProductId());
-
-      Product product = new Product(body.getProductId(), body.getName(), body.getWeight());
-      integration.createProduct(product);
-
-      if (body.getRecommendations() != null) {
-        body.getRecommendations().forEach(r -> {
-          Recommendation recommendation = new Recommendation(body.getProductId(), r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent());
-          integration.createRecommendation(recommendation);
-        });
-      }
-
-      if (body.getReviews() != null) {
-        body.getReviews().forEach(r -> {
-          Review review = new Review(body.getProductId(), r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent());
-          integration.createReview(review);
-        });
-      }
-
-      LOG.info("createCompositeProduct: composite entities created for productId: {}", body.getProductId());
-
-    } catch (RuntimeException re) {
-      LOG.warn("createCompositeProduct failed", re);
-      throw re;
-    }
-  }
-
-
-  /**
-   * Get a Product
-   *
-   * @param productId Id of the product
-   * @return
-   */
-  @Override
-  public ProductAggregate getProduct(int productId) {
-
-    LOG.info("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
-
-    Product product = integration.getProduct(productId);
-    if (product == null) {
-      throw new NotFoundException("No product found for productId: " + productId);
+        this.integration = integration;
     }
 
-    List<Recommendation> recommendations = integration.getRecommendations(productId);
+    /**
+     * Create Product
+     *
+     * @param body A JSON representation of the new composite product
+     */
+    @Override
+    public void createProduct(ProductAggregate body) {
 
-    List<Review> reviews = integration.getReviews(productId);
+        try {
 
-    LOG.info("getCompositeProduct: aggregate entity found for productId: {}", productId);
+            LOG.info("createCompositeProduct: creates a new composite entity for productId: {}", body.getProductId());
 
-    return createProductAggregate(product, recommendations, reviews);
-  }
+            Product product = new Product(body.getProductId(), body.getName(), body.getWeight());
+            integration.createProduct(product);
 
-  /**
-   * Delete a Product
-   *
-   * @param productId Id of the product
-   */
-  @Override
-  public void deleteProduct(int productId) {
+            if (body.getRecommendations() != null) {
+                body.getRecommendations().forEach(r -> {
+                    Recommendation recommendation = new Recommendation(body.getProductId(), r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent());
+                    integration.createRecommendation(recommendation);
+                });
+            }
 
-    LOG.info("deleteCompositeProduct: Deletes a product aggregate for productId: {}", productId);
+            if (body.getReviews() != null) {
+                body.getReviews().forEach(r -> {
+                    Review review = new Review(body.getProductId(), r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent());
+                    integration.createReview(review);
+                });
+            }
 
-    integration.deleteProduct(productId);
+            LOG.info("createCompositeProduct: composite entities created for productId: {}", body.getProductId());
 
-    integration.deleteRecommendations(productId);
+        } catch (RuntimeException re) {
+            LOG.warn("createCompositeProduct failed", re);
+            throw re;
+        }
+    }
 
-    integration.deleteReviews(productId);
 
-    LOG.info("deleteCompositeProduct: aggregate entities deleted for productId: {}", productId);
-  }
+    /**
+     * Get a Product
+     *
+     * @param productId Id of the product
+     * @return
+     */
+    @Override
+    public ProductAggregate getProduct(int productId) {
 
-  private ProductAggregate createProductAggregate(
-          Product product,
-          List<Recommendation> recommendations,
-          List<Review> reviews) {
+        LOG.info("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
 
-    // 1. Setup product info
-    int productId = product.getProductId();
-    String name = product.getName();
-    int weight = product.getWeight();
+        Product product = integration.getProduct(productId);
+        if (product == null) {
+            throw new NotFoundException("No product found for productId: " + productId);
+        }
 
-    // 2. Copy summary recommendation info, if available
-    List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null :
+        List<Recommendation> recommendations = integration.getRecommendations(productId);
+
+        List<Review> reviews = integration.getReviews(productId);
+
+        LOG.info("getCompositeProduct: aggregate entity found for productId: {}", productId);
+
+        return createProductAggregate(product, recommendations, reviews);
+    }
+
+    /**
+     * Delete a Product
+     *
+     * @param productId Id of the product
+     */
+    @Override
+    public void deleteProduct(int productId) {
+
+        LOG.info("deleteCompositeProduct: Deletes a product aggregate for productId: {}", productId);
+
+        integration.deleteProduct(productId);
+
+        integration.deleteRecommendations(productId);
+
+        integration.deleteReviews(productId);
+
+        LOG.info("deleteCompositeProduct: aggregate entities deleted for productId: {}", productId);
+    }
+
+    private ProductAggregate createProductAggregate(
+        Product product,
+        List<Recommendation> recommendations,
+        List<Review> reviews) {
+
+        // 1. Setup product info
+        int productId = product.getProductId();
+        String name = product.getName();
+        int weight = product.getWeight();
+
+        // 2. Copy summary recommendation info, if available
+        List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null :
             recommendations.stream()
-                    .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
-                    .collect(Collectors.toList());
+                .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
+                .toList();
 
-    // 3. Copy summary review info, if available
-    List<ReviewSummary> reviewSummaries = (reviews == null) ? null :
+        // 3. Copy summary review info, if available
+        List<ReviewSummary> reviewSummaries = (reviews == null) ? null :
             reviews.stream()
-                    .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
-                    .collect(Collectors.toList());
-    return new ProductAggregate(productId, name, weight, recommendationSummaries, reviewSummaries);
-  }
+                .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
+                .toList();
+        return new ProductAggregate(productId, name, weight, recommendationSummaries, reviewSummaries);
+    }
 }
